assets/queries/cloudFormation/aws/security_groups_with_meta_ip/test/positive1.yaml
Resources:
## Protocol set to "-1" (all ports will regardless of range set)
  Positive1_security_group_1:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Open security group
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: "-1"   
          FromPort: 2000    
          ToPort: 2000
          CidrIp: 0.0.0.0/0
        - IpProtocol: "-1"
          FromPort: 2000
          ToPort: 2000
          CidrIpv6: ::/0

  # Standalone IPv4 ingress rule
  Positive1_ingress_ipv4_1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref Positive1_security_group_1
      IpProtocol: "-1"
      FromPort: 3000    
      ToPort: 3000
      CidrIp: 0.0.0.0/0

  # Standalone IPv6 ingress rule
  Positive1_ingress_ipv6_1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref Positive1_security_group_1
      IpProtocol: "-1"
      FromPort: 3000 
      ToPort: 3000
      CidrIpv6: ::/0

## Any protocol with ports 0-65535 (all) open 
  Positive1_security_group_2:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Open security group
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: "tcp"   
          FromPort: 0    
          ToPort: 65535
          CidrIp: 0.0.0.0/0
        - IpProtocol: "udp"
          FromPort: 0
          ToPort: 65535
          CidrIpv6: ::/0

  # Standalone IPv4 ingress rule
  Positive1_ingress_ipv4_2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref Positive1_security_group_2
      IpProtocol: "udp"
      FromPort: 0    
      ToPort: 65535
      CidrIp: 0.0.0.0/0

  # Standalone IPv6 ingress rule
  Positive1_ingress_ipv6_2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref Positive1_security_group_2
      IpProtocol: "tcp"
      FromPort: 0 
      ToPort: 65535
      CidrIpv6: ::/0
